# Liquifact-contracts

./: README.md  TODO.md  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  test_output.txt  test_output_2.txt  test_output_3.txt
.github/workflows/: ci.yml
docs/: EVENT_SCHEMA.md  openapi.yaml  package-lock.json  package.json
docs/tests/: openapi.test.js
escrow/: Cargo.toml
escrow/src/: lib.rs  test.rs  test_funding_target.rs
